--- a/packages/@nekomata-ui/package.json
+++ b/packages/@nekomata-ui/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@nekomata-ui",
+  "version": "0.0.1",
   "svelte": "src/index.js",
   "module": "dist/index.mjs",
   "main": "dist/index.js",
@@ -27,6 +28,7 @@
     "svelte",
     "nekomata-ui"
   ],
+  "author": "Open Anthro Projects",
   "files": [
     "src",
     "dist"
