--- a/packages/nekomata-ui/package.json
+++ b/packages/nekomata-ui/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "@nekomata-ui",
-  "version": "0.0.1",
-  "svelte": "src/index.js",
+  "name": "nekomata-ui",
+  "version": "0.0.9",
+  "svelte": "dist/index.js",
   "module": "dist/index.mjs",
-  "main": "dist/index.js",
+  "main": "dist/index.umd.js",
+  "types": "dist/ts/index.d.ts",
   "scripts": {
+    "prebuild": "rm -rf ./dist",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "validate": "svelte-check",
@@ -14,13 +16,16 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "@tsconfig/svelte": "^1.0.10",
-    "rollup": "^2.28.2",
+    "fs-extra": "9.0.1",
+    "glob": "7.1.6",
+    "rollup": "^2.32.0",
+    "rollup-plugin-execute": "1.1.1",
     "rollup-plugin-filesize": "^9.0.2",
     "rollup-plugin-svelte": "^6.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.28.0",
-    "svelte-check": "^1.0.52",
-    "svelte-preprocess": "^4.3.1",
+    "svelte-check": "^1.0.60",
+    "svelte-preprocess": "^4.5.1",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3"
   },
