--- a/packages/nekomata-ui/package.json
+++ b/packages/nekomata-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nekomata-ui",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "svelte": "dist/index.js",
   "module": "dist/index.mjs",
   "main": "dist/index.umd.js",
@@ -31,11 +31,20 @@
   },
   "keywords": [
     "svelte",
-    "nekomata-ui"
+    "nekomata-ui",
+    "typescript"
   ],
   "author": "Open Anthro Projects",
   "files": [
     "src",
     "dist"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/open-anthro-projects/nekomata-ui"
+  },
+  "homepage": "",
+  "bugs": {
+      "url": "https://github.com/open-anthro-projects/nekomata-ui/issues"
+  }
 }
