--- a/packages/nekomata-ui/package.json
+++ b/packages/nekomata-ui/package.json
@@ -6,11 +6,10 @@
   "main": "dist/index.umd.js",
   "types": "dist/ts/index.d.ts",
   "scripts": {
-    "prebuild": "rm -rf ./dist",
+    "remove": "rm -rf ./dist",
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "validate": "svelte-check",
-    "prepublishOnly": "npm run build"
+    "validate": "svelte-check"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^9.0.0",
