--- a/packages/nekomata-ui/package.json
+++ b/packages/nekomata-ui/package.json
@@ -5,7 +5,7 @@
   "svelte": "dist/index.js",
   "module": "dist/index.mjs",
   "main": "dist/index.umd.js",
-  "types": "dist/ts/index.d.ts",
+  "types": "dist/index.d.ts",
   "scripts": {
     "prebuild": "rm -rf ./dist",
     "build": "rollup -c",
