--- a/packages/nekomata-ui/package.json
+++ b/packages/nekomata-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nekomata-ui",
   "license": "MIT",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "svelte": "dist/index.js",
   "module": "dist/index.mjs",
   "main": "dist/index.umd.js",
@@ -12,7 +12,8 @@
     "dev": "rollup -c -w",
     "validate": "svelte-check",
     "test": "jest src",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "coverage": "jest src --collectCoverage"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -23,6 +24,7 @@
     "@testing-library/svelte": "^3.0.0",
     "@tsconfig/svelte": "^1.0.10",
     "babel-jest": "^26.6.3",
+    "eslint-plugin-jest-dom": "^3.6.4",
     "fs-extra": "9.0.1",
     "glob": "7.1.6",
     "jest": "^26.6.3",
@@ -76,5 +78,9 @@
     "setupFilesAfterEnv": [
       "@testing-library/jest-dom/extend-expect"
     ]
+  },
+  "dependencies": {
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/jest": "^26.0.19"
   }
 }
