--- a/packages/nekomata-ui/tsconfig.json
+++ b/packages/nekomata-ui/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "@tsconfig/svelte/tsconfig.json",
     "compilerOptions": {
       "sourceMap": true,
+      "types": ["jest","svelte"]
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules/*"],
