Nekomata-ui 0.0.7 Row added

--- a/packages/nekomata-ui/tsconfig.json
+++ b/packages/nekomata-ui/tsconfig.json
@@ -4,6 +4,6 @@
       "sourceMap": true,
       "types": ["jest","svelte"]
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "src/AppBar/.js"],
     "exclude": ["node_modules/*"],
   }
