--- a/packages/nekomata-ui/package.json
+++ b/packages/nekomata-ui/package.json
@@ -22,31 +22,31 @@
     "coverage": "jest src --collectCoverage"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-typescript": "^8.1.1",
-    "@testing-library/jest-dom": "^5.11.9",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/svelte": "^3.0.3",
-    "@tsconfig/svelte": "^1.0.10",
-    "babel-jest": "^26.6.3",
-    "eslint-plugin-jest-dom": "^3.6.5",
-    "fs-extra": "9.1.0",
-    "glob": "7.1.6",
-    "jest": "^26.6.3",
-    "rollup": "^2.38.5",
+    "@tsconfig/svelte": "^2.0.1",
+    "babel-jest": "^27.0.6",
+    "eslint-plugin-jest-dom": "^3.9.0",
+    "fs-extra": "10.0.0",
+    "glob": "7.1.7",
+    "jest": "^27.0.6",
+    "rollup": "^2.56.2",
     "rollup-plugin-execute": "1.1.1",
-    "rollup-plugin-filesize": "^9.1.0",
+    "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-svelte": "^6.0.1",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.38.2",
-    "svelte-check": "^1.1.32",
-    "svelte-jester": "^1.3.0",
-    "svelte-preprocess": "^4.6.6",
-    "ts-jest": "^26.5.0",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3",
-    "y18n": ">=4.0.1"
+    "svelte": "^3.42.1",
+    "svelte-check": "^2.2.4",
+    "svelte-jester": "^1.8.2",
+    "svelte-preprocess": "^4.7.4",
+    "ts-jest": "^27.0.4",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5",
+    "y18n": ">=5.0.8"
   },
   "keywords": [
     "svelte",
@@ -87,6 +87,7 @@
       "ts",
       "svelte"
     ],
+    "testEnvironment": "jsdom",
     "setupFilesAfterEnv": [
       "@testing-library/jest-dom/extend-expect"
     ]
