--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^1.0.0-next.16",
+    "@sveltejs/adapter-static": "^1.0.0-next.17",
     "@sveltejs/kit": "next",
     "gh-pages": "^3.2.3",
+    "nekomata-ui": "0.2.3",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "svelte": "^3.34.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0",
-    "nekomata-ui": "0.2.3"
+    "typescript": "^4.0.0"
   },
   "type": "module"
 }
