--- a/packages/nekomata-ui/package.json
+++ b/packages/nekomata-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nekomata-ui",
   "license": "MIT",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "svelte": "dist/index.js",
   "module": "dist/index.mjs",
   "main": "dist/index.umd.js",
@@ -24,16 +24,16 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "@rollup/plugin-typescript": "^8.2.5",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-typescript": "8.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^2.0.1",
     "babel-jest": "^27.0.6",
     "eslint-plugin-jest-dom": "^3.9.0",
     "fs-extra": "10.0.0",
-    "glob": "7.1.7",
-    "jest": "^27.0.6",
+    "glob": "7.2.0",
+    "jest": "^27.4.4",
     "rollup": "^2.56.2",
     "rollup-plugin-execute": "1.1.1",
     "rollup-plugin-filesize": "^9.1.1",
@@ -41,7 +41,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.42.4",
     "svelte-check": "^2.2.4",
-    "svelte-jester": "^1.8.2",
+    "svelte-jester": "^2.1.5",
     "svelte-preprocess": "^4.7.4",
     "tar": "^6.1.9",
     "ts-jest": "^27.0.4",
