--- a/packages/nekomata-ui/package.json
+++ b/packages/nekomata-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nekomata-ui",
   "license": "MIT",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "svelte": "dist/index.js",
   "module": "dist/index.mjs",
   "main": "dist/index.umd.js",
@@ -22,31 +22,31 @@
     "coverage": "jest src --collectCoverage"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "@rollup/plugin-node-resolve": "^13.1.2",
     "@rollup/plugin-typescript": "8.3.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/svelte": "^3.0.3",
-    "@tsconfig/svelte": "^2.0.1",
-    "babel-jest": "^27.4.4",
-    "eslint-plugin-jest-dom": "^3.9.2",
+    "@tsconfig/svelte": "^3.0.0",
+    "babel-jest": "^27.4.5",
+    "eslint-plugin-jest-dom": "^4.0.0",
     "fs-extra": "10.0.0",
     "glob": "7.2.0",
-    "jest": "^27.4.4",
-    "rollup": "^2.61.1",
+    "jest": "^27.4.5",
+    "rollup": "^2.62.0",
     "rollup-plugin-execute": "1.1.1",
     "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-svelte": "^6.0.1",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.44.2",
-    "svelte-check": "^2.2.10",
+    "svelte": "^3.44.3",
+    "svelte-check": "^2.2.11",
     "svelte-jester": "^2.1.5",
-    "svelte-preprocess": "^4.9.8",
+    "svelte-preprocess": "^4.10.1",
     "tar": "^6.1.11",
-    "ts-jest": "^27.1.1",
+    "ts-jest": "^27.1.2",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.3",
+    "typescript": "^4.5.4",
     "y18n": ">=5.0.8"
   },
   "keywords": [
@@ -54,6 +54,7 @@
     "nekomata-ui",
     "typescript",
     "ui",
+    "library",
     "ui-components",
     "components",
     "svelte3"
