--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^1.0.0-next.17",
+    "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "next",
     "gh-pages": "^3.2.3",
-    "nekomata-ui": "0.2.5",
-    "prettier": "~2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.34.0",
-    "svelte-check": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "nekomata-ui": "0.2.7",
+    "prettier": "~2.5.1",
+    "prettier-plugin-svelte": "^2.6.0",
+    "svelte": "^3.46.2",
+    "svelte-check": "^2.3.0",
+    "svelte-preprocess": "^4.10.1",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.4"
   },
   "type": "module"
 }
