--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "svelte-check": "^2.3.0",
     "svelte-preprocess": "^4.10.2",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "ansi-regex": ">=5.0.1"
   },
   "type": "module"
 }
