--- a/packages/nekomata-ui/package.json
+++ b/packages/nekomata-ui/package.json
@@ -1,97 +1,65 @@
 {
-  "name": "nekomata-ui",
-  "license": "MIT",
-  "version": "0.2.11",
-  "svelte": "dist/index.js",
-  "module": "dist/index.mjs",
-  "main": "dist/index.umd.js",
-  "types": "dist/ts/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs"
-    },
-    "./package.json": "./package.json"
-  },
-  "scripts": {
-    "prebuild": "rm -rf ./dist",
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "validate": "svelte-check",
-    "test": "jest src",
-    "test:watch": "npm run test -- --watch",
-    "coverage": "jest src --collectCoverage"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/preset-env": "^7.16.11",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "8.3.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/svelte": "^3.0.3",
-    "@tsconfig/svelte": "^3.0.0",
-    "babel-jest": "^27.4.6",
-    "eslint-plugin-jest-dom": "^4.0.1",
-    "fs-extra": "10.0.0",
-    "glob": "7.2.0",
-    "jest": "^27.4.7",
-    "rollup": "^2.66.1",
-    "rollup-plugin-execute": "1.1.1",
-    "rollup-plugin-filesize": "^9.1.2",
-    "rollup-plugin-svelte": "^6.0.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.46.3",
-    "svelte-check": "^2.3.0",
-    "svelte-jester": "^2.1.5",
-    "svelte-preprocess": "^4.10.2",
-    "tar": "^6.1.11",
-    "ts-jest": "^27.1.3",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.5",
-    "y18n": ">=5.0.8"
-  },
-  "keywords": [
-    "svelte",
-    "nekomata-ui",
-    "typescript",
-    "ui",
-    "library",
-    "ui-components",
-    "components",
-    "svelte3"
-  ],
-  "author": "Open Anthro Projects",
-  "files": [
-    "src",
-    "dist"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/open-anthro-projects/nekomata-ui"
-  },
-  "homepage": "https://open-anthro-projects.github.io/nekomata-ui/",
-  "bugs": {
-    "url": "https://github.com/open-anthro-projects/nekomata-ui/issues"
-  },
-  "jest": {
-    "verbose": true,
-    "transform": {
-      "^.+\\.js$": "babel-jest",
-      "^.+\\.svelte$": [
-        "svelte-jester",
-        {
-          "preprocess": true
-        }
-      ],
-      "^.+\\.ts$": "ts-jest"
-    },
-    "moduleFileExtensions": [
-      "js",
-      "ts",
-      "svelte"
-    ],
-    "testEnvironment": "jsdom",
-    "setupFilesAfterEnv": [
-      "@testing-library/jest-dom/extend-expect"
-    ]
-  }
+	"name": "nekomata-ui",
+	"license": "MIT",
+	"version": "0.3.0",
+	"scripts": {
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"package": "svelte-kit package",
+		"preview": "svelte-kit preview",
+		"prepare": "svelte-kit sync",
+		"test": "jest",
+		"test:watch": "npm run test -- --watchAll",
+		"coverage": "jest --coverage",
+		"testwright": "playwright test",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
+		"format": "prettier --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@playwright/test": "^1.23.1",
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/svelte": "^3.1.3",
+		"@types/jest": "^28.1.4",
+		"@typescript-eslint/eslint-plugin": "^5.30.3",
+		"@typescript-eslint/parser": "^5.30.3",
+		"eslint": "^8.19.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"jest": "^28.1.2",
+		"prettier": "^2.7.1",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.48.0",
+		"svelte-check": "^2.8.0",
+		"svelte-jester": "^2.3.2",
+		"svelte-preprocess": "^4.10.7",
+		"svelte2tsx": "0.5.11",
+		"ts-jest": "^28.0.5",
+		"tslib": "^2.4.0",
+		"typescript": "^4.7.4",
+		"jest-environment-jsdom":"28.1.2"
+	},
+	"keywords": [
+		"svelte",
+		"nekomata-ui",
+		"typescript",
+		"ui",
+		"library",
+		"ui-components",
+		"components",
+		"svelte3"
+	],
+	"author": "Open Anthro Projects",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/open-anthro-projects/nekomata-ui"
+	},
+	"homepage": "https://open-anthro-projects.github.io/nekomata-ui/",
+	"bugs": {
+		"url": "https://github.com/open-anthro-projects/nekomata-ui/issues"
+	},
+	"type": "module"
 }
