--- a/packages/nekomata-ui/tsconfig.json
+++ b/packages/nekomata-ui/tsconfig.json
@@ -1,9 +1,13 @@
 {
-    "extends": "@tsconfig/svelte/tsconfig.json",
-    "compilerOptions": {
-      "sourceMap": true,
-      "types": ["jest","svelte"]
-    },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules/*"],
-  }
+	"extends": "./.svelte-kit/tsconfig.json",
+	"compilerOptions": {
+		"allowJs": true,
+		"checkJs": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"sourceMap": true,
+		"strict": false
+	}
+}
