--- a/packages/nekomata-ui/package.json
+++ b/packages/nekomata-ui/package.json
@@ -3,44 +3,49 @@
 	"license": "MIT",
 	"version": "0.3.0",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
-		"prepare": "svelte-kit sync",
-		"test": "jest",
-		"test:watch": "npm run test -- --watchAll",
-		"coverage": "jest --coverage",
-		"testwright": "playwright test",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
-		"format": "prettier --write --plugin-search-dir=. ."
+		"dev": "vite dev",
+		"build": "svelte-kit sync && svelte-package",
+		"prepublishOnly": "echo 'Did you mean to publish `./package/`, instead of `./`?' && exit 1",
+		"test": "playwright test",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test:unit": "vitest",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write .",
+		"coverage": "vitest run --coverage"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.23.1",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
-		"@testing-library/jest-dom": "^5.16.4",
-		"@testing-library/svelte": "^3.1.3",
-		"@types/jest": "^28.1.4",
-		"@typescript-eslint/eslint-plugin": "^5.30.3",
-		"@typescript-eslint/parser": "^5.30.3",
-		"eslint": "^8.19.0",
+		"@babel/core": "^7.20.12",
+		"@babel/plugin-proposal-class-properties": "^7.18.6",
+		"@babel/preset-env": "^7.20.2",
+		"@babel/preset-typescript": "^7.18.6",
+		"@linaria/babel-preset": "^4.4.1",
+		"@linaria/core": "^4.2.6",
+		"@linaria/vite": "^4.2.7",
+		"@playwright/test": "^1.28.1",
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/package": "^1.0.0",
+		"@sveltejs/vite-plugin-svelte": "^2.0.2",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/svelte": "^3.2.2",
+		"@typescript-eslint/eslint-plugin": "^5.45.0",
+		"@typescript-eslint/parser": "^5.45.0",
+		"@vitest/coverage-c8": "^0.28.4",
+		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"jest": "^28.1.2",
-		"prettier": "^2.7.1",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.48.0",
-		"svelte-check": "^2.8.0",
-		"svelte-jester": "^2.3.2",
-		"svelte-preprocess": "^4.10.7",
-		"svelte2tsx": "0.5.11",
-		"ts-jest": "^28.0.5",
-		"tslib": "^2.4.0",
-		"typescript": "^4.7.4",
-		"jest-environment-jsdom":"28.1.2"
+		"global-jsdom": "^8.7.0",
+		"jsdom": "^21.1.0",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
+		"svelte": "^3.54.0",
+		"svelte-check": "^3.0.1",
+		"svelte-preprocess": "^5.0.1",
+		"tslib": "^2.4.1",
+		"typescript": "^4.9.3",
+		"vite": "^4.0.0",
+		"vitest": "^0.25.3"
 	},
 	"keywords": [
 		"svelte",
